--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "lumia-discord",
+  "name": "git-discord",
   "version": "1.0.0",
   "description": "Integração discord",
   "main": "src/client/index.js",
   "scripts": {
-    "lint": "eslint",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "dev": "nodemon",
     "gitmoji": "gitmoji -c"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint --fix ."
+      "pre-commit": "lint-staged"
     }
   },
+  "lint-staged": {
+    "*.js": "eslint --fix"
+  },
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "glob": "^10.3.1",
     "graphql-tag": "^2.12.6",
     "i18next": "^23.2.6",
@@ -27,9 +31,15 @@
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
-    "eslint": "^8.44.0",
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "gitmoji-cli": "^8.4.0",
-    "husky": "^8.0.3",
-    "nodemon": "^1.14.9"
+    "globals": "^16.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
+    "nodemon": "^1.14.9",
+    "prettier": "^3.5.3"
   }
 }
