--- a/.env copy
+++ b/.env copy
@@ -1,1 +1,7 @@
 TOKEN=MTM2NzkwMDAyMjAwNzUyOTU0Mw.GxTN_7.rnYbLUohHx_wMVGbw7BtlOkZ1ef3oUJpSn0AM4
+
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=root
+DB_NAME=postgres
