--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Integração discord",
   "main": "src/client/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "prettier --write .",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix && prettier --write .",
+    "format": "npm-run-all --parallel lint prettier",
     "dev": "nodemon",
     "gitmoji": "gitmoji -c"
   },
@@ -26,9 +28,11 @@
     "glob": "^10.3.1",
     "graphql-tag": "^2.12.6",
     "i18next": "^23.2.6",
+    "knex": "^3.1.0",
     "module-alias": "^2.2.3",
     "moment": "^2.29.4",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "pg": "^8.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
@@ -40,6 +44,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "nodemon": "^1.14.9",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3"
   }
 }
