:bug: Correção .env copy

--- a/.env copy
+++ b/.env copy
@@ -1,6 +1,6 @@
 TOKEN=MTM2NzkwMDAyMjAwNzUyOTU0Mw.GxTN_7.rnYbLUohHx_wMVGbw7BtlOkZ1ef3oUJpSn0AM4
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=root
